crates/ir/tests/ir/snapshots/main__ir__lower__linear__linear_self_recur_own_param.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module linear__linear_self_recur_own_param

type Buf = MkBuf#0(String)
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn consume(v0: ~Buf) -> Unit =
  switch v0 {
    0 (v1: String) ->
      ()
  }

fn loop(v2: ~Buf, v3: Int) -> Unit =
  let_join v10(v6: Bool) =
    if v6 {
      let v7: Unit = call consume(v2)
      v7
    } else {
      let v8: Int = sub_int(v3, 1)
      let v9: Unit = call loop(v2, v8)
      v9
    }
  in
  let v4: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v5: Bool = trait_call core/eq.Eq.eq(v4, v3, 0)
  jump v10(v5)

fn main() -> Unit =
  let v11: ~Buf = construct Buf::MkBuf#0("x")
  let v12: Unit = call loop(v11, 3)
  v12
