crates/ir/tests/ir/snapshots/main__ir__lower__linear__linear_self_recur_own_param_generic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module linear__linear_self_recur_own_param_generic

extern java "native.Foo" foo_new() -> ~Foo[r8]
extern java "native.Foo" foo_consume(~Foo[s8]) -> Unit
extern type java "native.Foo" Foo
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare foo_consume: (~Foo[s8]) -> Unit
declare foo_new: () -> ~Foo[r8]

fn consume_loop(v0: ~Foo[e9], v1: Int) -> Unit =
  let_join v8(v4: Bool) =
    if v4 {
      let v5: Unit = call foo_consume(v0)
      v5
    } else {
      let v6: Int = sub_int(v1, 1)
      let v7: Unit = call consume_loop(v0, v6)
      v7
    }
  in
  let v2: Dict[core/eq.Eq, Int] = get_dict core/eq.Eq[Int]
  let v3: Bool = trait_call core/eq.Eq.eq(v2, v1, 0)
  jump v8(v3)

fn user() -> Unit =
  let v9: ~Foo[n9] = call foo_new()
  let v10: Unit = call consume_loop(v9, 3)
  v10

fn main() -> Unit =
  let v11: Unit = call user()
  v11
